# lignin

./: README.md  pyproject.toml
lignin/: main.py
